# aozora2

./: .gitignore  Cargo.toml  README.en.md  README.md  build.rs
crates/aozora-core/: Cargo.toml  README.en.md  README.md
crates/aozora-core/src/: accent.rs  char_type.rs  document.rs  lib.rs
crates/aozora-core/src/node/: block.rs
crates/aozora-core/src/parser/: command_parser.rs  reference_resolver.rs
crates/aozora2/: Cargo.toml
crates/aozora2/src/html/: document_renderer.rs  mod.rs  node_renderer.rs  options.rs  presentation.rs  tag_generator.rs
crates/aozora2text/: Cargo.toml  README.en.md  README.md
src/: document.rs  encoding.rs  extractor.rs  gaiji.rs  lib.rs  main.rs  token.rs  tokenizer.rs
