[package]
name = "aozora2text"
version = "0.5.1"
edition = "2021"
description = "Convert Aozora Bunko format to plain text"
license = "MIT"
repository = "https://github.com/takahashim/aozora2text"
readme = "README.en.md"
keywords = ["aozora", "bunko", "japanese", "text", "converter"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
aozora-core = { path = "../aozora-core" }
clap = { version = "4", features = ["derive"] }
zip = "2"
